# qpa

./: .coveragerc  .env_example  .gitignore  FORMATTING.md  README.md  justfile  mkdocs.yml  notes.txt  pyproject.toml  pytest.ini
.github/workflows/: pages.yml  test-and-coverage.yml
conf/: config.py
data/: classiq_quantum_concepts.csv  enriched_classiq_quantum_patterns.csv  enriched_pennylane_quantum_patterns.csv  enriched_qiskit_quantum_patterns.csv  extended_pattern_list.csv  filtered_repo_list.txt  final_pattern_report.txt  patterns_used_in_categorization.csv  pennylane_quantum_concepts.csv  pennylane_quantum_concepts.json  qiskit_quantum_concepts.csv  qiskit_quantum_concepts.json  quantum_concept_matches_with_patterns.csv  unclassified_concepts.csv
docs/: _config.yml  csv_export_feature.md  experiment.mermaid  experimental_data.md  extended_pattern_coverage_analysis.md  extracted_concepts_summary.md  final_pattern_report.md  index.md  refactoring_summary.md
tests/: COVERAGE.md  conftest.py  run_tests.py  test_clone_repos.py  test_convert_notebooks.py  test_csv_exporter.py  test_data_processor.py  test_download_resources_quantum_patterns.py  test_find_and_copy_notebooks.py  test_generate_base_concept_report.py  test_generate_experimental_data_report.py  test_generate_final_report.py  test_generate_pattern_report.py  test_github_search.py  test_identify_classiq_core_concepts.py  test_identify_pennylane_core_concepts.py  test_identify_qiskit_core_concepts.py  test_report_generator_refactored.py  test_run_main_analysis.py  test_statistics_calculator.py
(+24 files in other folders)
