[project]
name = "quantum_patterns"
version = "0.1.0"
description = "A quantum vs classical test classifier using an LLM ensemble."
requires-python = ">=3.12"

dependencies = [
    "openai>=1.82.0",
    "anthropic>=0.52.0",
    "beautifulsoup4>=4.13.4",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "pandas>=2.3.0",
    "sqlalchemy>=2.0.41",
    "astunparse>=1.6.3",
    "tqdm>=4.67.1",
    "notebook>=7.4.0",
    "nbconvert>=7.16.0",
    "transformers>=4.52.4",
    "torch>=2.7.0",
    "sentence-transformers>=4.1.0",
    "scikit-learn>=1.6.1",
    "huggingface-hub>=0.32.3",
    "requests>=2.32.3",
    "nbformat>=5.9.0",
    "PyGithub>=2.8.1",
    "classiq>=0.94.2",

]

[project.optional-dependencies]
dev = [
    "pandas-stubs>=2.2.3",
    "rich>=14.0.0",
    "black",
    "ruff",
    "pytest",
]
